# ecology-simulator

./: Cargo.toml  build.sh  index.html  rust-toolchain.toml  serve.py
.cargo/: config.toml
examples/: climate_diagnostics.rs  hemisphere_diagnostics.rs  plate_diagnostics.rs  terrain_diagnostics.rs  wind_diagnostics.rs
src/: lib.rs  rng.rs
src/grid/: fibonacci.rs  mod.rs  voronoi.rs
src/render/: camera.rs  gpu.rs  mesh.rs  mod.rs  pick.rs
src/render/shaders/: cells.wgsl
src/sim/: elevation.rs  mod.rs  temperature.rs  terrain.rs  wind.rs
web/: main.js  worker.js
